--- a/script.css
+++ b/script.css
@@ -1,37 +1,59 @@
 /*contact form*/
 
-#contactform {
-    padding: 2em;
-    bacround: yellow;
-    border-radius: 1rem;
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
 }
 
-input {
+body {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
     width: 100%;
-    margin-top: 2px;
+    height: 110px;
+    background-color: lightblue;
+    margin-bottom: 7em;
+}
+
+nav li {
+    display: inline-block;
+    margin: 3em;
+    line-height: 20px;
+    font-size: 20px;
+}
+
+nav a {
     padding: 10px;
-    font-size: 15px;
+    text-decoration: none;
+    margin-bottom: 2em;
+    background-color: black;
+    padding: 10px;
+    display: inline-block;
 }
 
-button {
-    background-color: red;
-    border: none;
-    width: 180px;
-    padding: 1rem;
-    color: white;
-    margin-top: 9px;
-    cursor: pointer;
-    border: 0.2rem;
+.button {
+    display: inline-block;
+    font-size: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-width: 4px;
+    border-style: solid;
+    padding: 0.5em 1.75em;
+    color: red;
 }
 
-label {
-    display: block;
-    margin-top: 1rem;
+h1 {
+    text-align: center;
 }
 
-.form-error {
-    display: none;
-    color: green;
-    font-size: 0.8rem;
-    margin-top: 2px;
+.container {
+    position: relative;
+    text-align: center;
+    padding: 3em;
+    font-size: 1.3em;
+    top: 85%;
 }
